[2025-03-06] instructor - Docs: 딥러닝 내용 수정
Close: #8

--- a/00_Main/checklist/03_딥러닝.md
+++ b/00_Main/checklist/03_딥러닝.md
@@ -1,66 +1,47 @@
-# 📚 머신러닝 체크리스트
+# 📚 딥러닝 체크리스트
 
-## 머신러닝의 등장
+## 딥러닝의 등장
 
-- ✅ 머신러닝 파이프라인
+- ✅ 인공신경망 개념
+- ✅ 딥러닝의 역사: Perceptron - ANN - CNN - RNN - Seq2Seq - Attention - Transformer
 
-## 1. Feature Engineering
+## 1.딥러닝 학습
 
-**Feature Engineering**이란 모델이 학습하기 좋은 형태로 데이터를 변환하는 과정을 의미한다. 
-
-머신러닝은 변수에 따라 성능이 달라지기 때문에 Feature Engineering은 매우 중요하다. 
-
-**다중공선성**, **차원의 저주**
-
+- ✅ 학습 라이브러리: Pytorch
+- ✅ 학습 핵심 아이디어
 - ✅ 데이터 전처리
-    - 불균형 데이터 처리
-    - 정규화/표준화, 로그변환, 스케일링
+    - 자연어: tokenizer
+    - 이미지: transform
+    - 오디오: mfcc, mel-spectrogram 등 특성 추출
+- ✅ 학습 파이프라인
+- ✅ 학습의 효율성을 위한 기능
+- ✅ 과적합을 줄이기 위한 Layer 
+- ✅ Box Layer
 
-- ✅ 🔥 Feature Selection(변수 선택) 
-    - 불필요한 변수를 제거하여 모델 성능을 향상시킨다. 
+## 2. 딥러닝 모델
 
-- ✅ Feature Extraction(특성 추출)
-    - 기존 데이터를 새로운 차원으로 변환하여 의미 있는 정보를 생성
+- ✅ 각 대표 모델들의 핵심 개념
+    - CNN
+    - RNN 
+    - Seq2Seq
+    - Attention
+    - Transformer 
+- ✅ 전이 학습 / 파인 튜닝
+- ✅ 🔥 태스크별 모델 및 성능평가
 
-## 2. 학습 방법에 따른 다양한 모델들
+## 3. 딥러닝 활용
 
-- ✅ 지도학습
-    - 선형회귀 / 로지스틱 회귀
-    - 결정 트리(Decision Tree)
-    - K-Nearest Neighbors, KNN
-    - Support Vector Machine
-- ✅ 비지도학습
-    - K-Means Clustering
-    - DBSCAN
-- ✅ 하이퍼파라미터 최적화 방법
+- ✅ 🔥 관심 분야의 최신 트렌드
+    - 자연어 생성
+    - 이미지 생성
+    - 객체 탐지
+    - 음성 합성 / 보이스 클로닝
 
-## 3. 앙상블(Ensemble)
+- ✅ 🔥 딥러닝 서빙 및 배포 능력
+    - Python 서버 라이브러리: Django, Flask, FastAPI
+    - 실시간 데이터 통신: Socket
+    - SQL DB 라이브러리: SQLAlchemy 
 
-- ✅ 앙상블이란?
-- ✅ 배깅(Bagging): Random Forest
-- ✅ 부스팅(Boosting): XGBoost, LightGBM
-- ✅ 스태킹(Stacking)
-- ✅ 보팅(Voting)
-
-## 4. AutoML
-
-- ✅ AutoML의 역할
-- ✅ 🔥 AutoML에서 개발자의 역할
-
-## 5. 성능지표
-
-- ✅ 예측
-    - MSE 
-    - RMSE
-    - MAE
-    - $R^2$
-
-- ✅ 분류
-    - Accuracy
-    - Precision
-    - Recall 
-    - F1-Score
-    - ROC-AUC
-
-## 5. 머신러닝이 중요한 이유
-
+- ✅ 딥러닝 모델 활용 능력
+    1. 새로운 모델을 테스트 / 학습(파인튜닝)할 수 있다.
+    2. 여러 AI 모델을 활용하여 하나의 서비스를 만들 수 있다.
